<?xml version="1.0" encoding="utf-8"?>


<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8dp"
    android:background="#FFFFFF"
    android:backgroundTint="#FFFFFF"
    android:foregroundTint="@color/darkviolet"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFFFFF"
        android:backgroundTint="#FFFFFF"
        android:foregroundTint="@color/darkviolet"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_titulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFFFFF"
            android:backgroundTint="#FFFFFF"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/titulo"
            android:textAlignment="center"
            android:textColor="@color/darkviolet"
            android:textSize="24sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_nombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="?attr/dialogPreferredPadding"
            android:autofillHints=""
            android:ems="10"
            android:fontFamily="sans-serif-condensed-light"
            android:hint="@string/nombre"
            android:inputType="textPersonName"
            android:textColor="@color/black"
            android:textColorHint="@color/darkgray" />

        <EditText
            android:id="@+id/et_cedula"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:fontFamily="sans-serif-condensed-light"
            android:hint="@string/cedula"
            android:inputType="number"
            android:textColor="@color/black"
            android:textColorHint="@color/darkgray" />

        <EditText
            android:id="@+id/et_correo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:fontFamily="sans-serif-condensed-light"
            android:hint="@string/correo"
            android:inputType="textEmailAddress"
            android:textColor="@color/black"
            android:textColorHint="@color/darkgray" />

        <EditText
            android:id="@+id/et_telefono"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:fontFamily="sans-serif-condensed-light"
            android:hint="@string/telefono"
            android:inputType="phone"
            android:textColor="@color/black"
            android:textColorHint="@color/darkgray" />

        <EditText
            android:id="@+id/et_contrasena"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:fontFamily="sans-serif-condensed-light"
            android:hint="@string/contrasena"
            android:inputType="textPassword"
            android:textColor="@color/black"
            android:textColorHint="@color/darkgray" />

        <EditText
            android:id="@+id/et_rep_contrasena"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:fontFamily="sans-serif-condensed-light"
            android:hint="@string/rep_contrasena"
            android:inputType="textPassword"
            android:textColor="@color/black"
            android:textColorHint="@color/darkgray" />

        <TextView
            android:id="@+id/tv_genero"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed-light"
            android:text="@string/genero"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rb_masculino"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:buttonTint="@color/darkviolet"
                android:checked="true"
                android:gravity="start|center_vertical"
                android:text="@string/masculino"
                android:textColorLink="#03A9F4" />

            <RadioButton
                android:id="@+id/rb_femenino"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:buttonTint="@color/darkviolet"
                android:gravity="start|center_vertical"
                android:text="@string/femenino" />
        </RadioGroup>

        <TextView
            android:id="@+id/tv_fecha_nacimiento"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed-light"
            android:text="@string/fecha_nacimiento"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_fecha"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:fontFamily="sans-serif-condensed-light"
                android:text="@string/fecha"
                android:textColor="@color/black"
                android:textColorHint="@color/darkgray"
                android:textSize="14sp" />

            <ImageButton
                android:id="@+id/ib_calendario"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:tint="@color/darkviolet"
                app:srcCompat="@android:drawable/ic_menu_month"
                android:contentDescription="TODO" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_ciudad_nacimiento"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed-light"
            android:text="@string/ciudad_nacimiento"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <Spinner
            android:id="@+id/sp_ciudad_nacimiento"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/lista_ciudades" />

        <TextView
            android:id="@+id/tv_pasatiempos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed-light"
            android:text="@string/pasatiempos"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/ch_leer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/leer" />

            <CheckBox
                android:id="@+id/ch_videojuegos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/videojuegos" />

            <CheckBox
                android:id="@+id/ch_deportes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/deportes" />

            <CheckBox
                android:id="@+id/ch_dormir"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/dormir" />
        </LinearLayout>

        <Button
            android:id="@+id/bt_guardar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="?attr/listPreferredItemPaddingEnd"
            android:background="@color/darkviolet"
            android:fontFamily="sans-serif-condensed-light"
            android:text="@string/guardar"
            android:textAllCaps="false"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_resultado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="?attr/dialogPreferredPadding"
            android:text="@string/resultado" />
    </LinearLayout>
</ScrollView>